--- a/Dashboard/Sass/assets.scss
+++ b/Dashboard/Sass/assets.scss
@@ -3,9 +3,11 @@
     -webkit-transform: rotate(0);
     transform: rotate(0);
   }
+
   50% {
     transform: rotate(60deg);
   }
+
   100% {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
@@ -13,6 +15,7 @@
 }
 
 @keyframes shake-lr {
+
   0%,
   100% {
     -webkit-transform: rotate(0deg);
@@ -20,28 +23,49 @@
     -webkit-transform-origin: 50% 50%;
     transform-origin: 50% 50%;
   }
+
   10% {
     -webkit-transform: rotate(8deg);
     transform: rotate(8deg);
   }
+
   20%,
   40%,
   60% {
     -webkit-transform: rotate(-10deg);
     transform: rotate(-10deg);
   }
+
   30%,
   50%,
   70% {
     -webkit-transform: rotate(10deg);
     transform: rotate(10deg);
   }
+
   80% {
     -webkit-transform: rotate(-8deg);
     transform: rotate(-8deg);
   }
+
   90% {
     -webkit-transform: rotate(8deg);
     transform: rotate(8deg);
+  }
+}
+
+
+
+@keyframes arrowRight {
+
+  0%,
+  100% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translate(10px, 0);
+    opacity: 1;
   }
 }
