--- a/Dashboard/Sass/welcome-section.scss
+++ b/Dashboard/Sass/welcome-section.scss
@@ -47,6 +47,7 @@
     .welcome-text {
         padding: 14px;
         color: #556ee6;
+        padding-right: 0;
 
         h5 {
             font-size: 17px;
@@ -66,12 +67,12 @@
     flex-direction: row;
 
     margin-bottom: 20px;
-    background-color: #fff;
+    background-color: $base-color;
     padding: 0 20px 20px 20px;
 
     img {
         position: absolute;
-        top: 70px;
+        top: 75px;
         left: 20px;
         border-radius: 50%;
         border: 5px solid #fff;
@@ -91,6 +92,8 @@
         margin-top: 10px;
         font-size: 13px;
     }
+
+
 }
 
 .welcome-profile {
@@ -133,8 +136,8 @@
     color: #fff;
     background-color: #556ee6;
     border-color: #556ee6;
-    padding: 6px 11px;
-    font-size: 12px;
+    padding: 6px 12px;
+    font-size: 11px;
     border-radius: 5px;
     box-shadow: none;
     outline: none;
@@ -147,7 +150,7 @@
 }
 
 .monthly-earnings {
-    background-color: #fff;
+    background-color: $base-color;
     padding: 20px;
     display: flex;
     flex-direction: column;
