--- a/Dashboard/main.scss
+++ b/Dashboard/main.scss
@@ -6,3 +6,5 @@
 @import "./Sass/graphics.scss";
 @import "./Sass/svgs.scss";
 @import "./Sass/social-activity.scss";
+@import "./Sass/activity-stats.scss";
+@import "./Sass/transations.scss";
