--- a/main.scss
+++ b/main.scss
@@ -8,3 +8,4 @@
 @import "./Sass/social-activity.scss";
 @import "./Sass/activity-stats.scss";
 @import "./Sass/transations.scss";
+@import "./Sass/toggle-menu.scss";
