--- a/Sass/global.scss
+++ b/Sass/global.scss
@@ -1,5 +1,21 @@
 $base-color: #fff;
 
+.scroll-hidden {
+  overflow: hidden;
+}
+
+.scroll-auto {
+  overflow: scroll;
+}
+
+.delete-item {
+  display: none;
+}
+
+.restore-item {
+  display: block;
+}
+
 body,
 html {
   width: 100%;
@@ -9,7 +25,6 @@ html {
 }
 
 body {
-  overflow: hidden;
   font-family: Poppins, sans-serif;
   font-weight: 500;
   line-height: 1.5;
@@ -45,9 +60,17 @@ p {
   color: #74788d;
 }
 
+.menu-change_small {
+  grid-template-columns: 80px 5fr;
+}
+
+.menu-change_big {
+  grid-template-columns: 1.1fr 5fr;
+}
+
 .main-items {
   display: grid;
-  grid-template-columns: 80px 5fr;
+  // grid-template-columns: 80px 5fr;
   // grid-template-columns: 1.1fr 5fr;
   grid-template-rows: 70px 13fr;
   justify-items: start;
@@ -71,7 +94,7 @@ p {
 .black-content {
   width: 100%;
   background-color: #2a3042;
-  // padding: 0 !important;
+  padding: 0 !important;
 }
 
 .white-content {
@@ -81,7 +104,7 @@ p {
   line-height: 1.5;
   color: #495057;
   padding: 25px 20px;
-  overflow: scroll;
+
   display: grid;
   grid-template-columns: 33% 65.5%;
   grid-template-rows: 50px;
