--- a/Sass/black-content.scss
+++ b/Sass/black-content.scss
@@ -24,8 +24,8 @@
 }
 
 .black-content {
-  // overflow: none;
-  overflow-y: scroll;
+  // overflow: auto;
+  // overflow-y: scroll;
   // overflow-x: hidden;
   border: 1px solid #515e75;
   border-right: 0;
