--- a/Sass/black-navigation.scss
+++ b/Sass/black-navigation.scss
@@ -14,11 +14,13 @@
   width: 100%;
   position: relative;
   transition: none;
+  padding: 10px;
 }
 
 
 .toggler-menu-helper {
-  width: 300% !important;
-  left: 13px;
+  width: 250% !important;
+  left: 20px;
   position: absolute;
+
 }
