--- a/main.scss
+++ b/main.scss
@@ -9,3 +9,4 @@
 @import "./Sass/activity-stats.scss";
 @import "./Sass/transations.scss";
 @import "./Sass/toggle-menu.scss";
+@import "./Sass/popup.scss";
