--- a/main.scss
+++ b/main.scss
@@ -10,3 +10,4 @@
 @import "./Sass/transations.scss";
 @import "./Sass/toggle-menu.scss";
 @import "./Sass/popup.scss";
+@import "./Sass/dark-mode.scss";
