--- a/Sass/global.scss
+++ b/Sass/global.scss
@@ -1,4 +1,7 @@
 $base-color: #fff;
+$dark-mode-color:#2a3042;
+
+
 
 .scroll-hidden {
   overflow: hidden;
@@ -6,6 +9,7 @@ $base-color: #fff;
 
 .scroll-auto {
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .delete-item {
@@ -37,6 +41,7 @@ body {
   color: #495057;
   font-size: 13px;
   position: relative;
+  background-color: #f8f8fb;
 }
 
 * {
@@ -107,12 +112,11 @@ p {
 
 .white-content {
   width: 100%;
-  background-color: #f8f8fb;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
   padding: 25px 20px;
-
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: 33% 65.5%;
   grid-template-rows: 50px;
