--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 
 .scroll-auto {
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .delete-item {
@@ -34,6 +35,7 @@ body {
   color: #495057;
   font-size: 13px;
   position: relative;
+  background-color: #f8f8fb;
 }
 
 * {
@@ -102,11 +104,11 @@ p {
 
 .white-content {
   width: 100%;
-  background-color: #f8f8fb;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
   padding: 25px 20px;
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: 33% 65.5%;
   grid-template-rows: 50px;
@@ -238,13 +240,14 @@ p {
 .mega-menu {
   display: flex;
   padding: 7px 12px;
+  justify-content: center;
+  align-items: center;
 }
 .mega-menu .wnavigation-scroll button {
   border: 0;
   margin-right: 25px;
   background-color: #fff;
   cursor: pointer;
-  margin-top: 8px;
   outline: none;
 }
 .mega-menu .wnavigation-scroll i {
@@ -283,12 +286,12 @@ p {
   font-size: 15px;
   font-weight: 500;
   color: #495057;
+  padding-left: 15px;
 }
 .mega-menu .mega-link {
   text-decoration: none;
   font-weight: 400;
   font-size: 13px;
-  margin-top: 8px;
   color: #555b6d;
   display: block;
 }
@@ -370,16 +373,6 @@ p {
 
 .button-fulscreen {
   outline: none;
-}
-
-.user-menu_darkmode {
-  margin-right: 5px;
-}
-.user-menu_darkmode label {
-  display: flex;
-}
-.user-menu_darkmode label input {
-  margin-right: 10px;
 }
 
 .black-content::-webkit-scrollbar {
@@ -1361,6 +1354,159 @@ main .toggler-padding {
 
 .close-popup_animation {
   animation: 2s linear close-animation;
+}
+
+.user-menu_darkmode {
+  margin-right: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.user-menu_darkmode .switch {
+  position: relative;
+  display: inline-block;
+  margin-left: 15px;
+}
+.user-menu_darkmode .switch-input {
+  display: none;
+}
+.user-menu_darkmode .switch-label {
+  display: block;
+  width: 48px;
+  height: 24px;
+  text-indent: -150%;
+  clip: rect(0 0 0 0);
+  color: transparent;
+  user-select: none;
+}
+.user-menu_darkmode .switch-label::before,
+.user-menu_darkmode .switch-label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  cursor: pointer;
+}
+.user-menu_darkmode .switch-label::before {
+  width: 80%;
+  height: 80%;
+  background-color: #dedede;
+  border-radius: 9999em;
+  -webkit-transition: background-color 0.25s ease;
+  transition: background-color 0.25s ease;
+}
+.user-menu_darkmode .switch-label::after {
+  top: 0;
+  left: 0;
+  width: 19px;
+  height: 19px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
+  -webkit-transition: left 0.25s ease;
+  transition: left 0.25s ease;
+}
+.user-menu_darkmode .switch-input:checked + .switch-label::before {
+  background-color: #89c12d;
+}
+.user-menu_darkmode .switch-input:checked + .switch-label::after {
+  left: 24px;
+}
+
+.dark-mode_body {
+  color: #a6b0cf;
+  background-color: #222736 !important;
+}
+.dark-mode_body .welcome-user .welcome-text p {
+  color: #556EE6 !important;
+}
+.dark-mode_body .title-box .dash a {
+  color: #f6f6f6;
+  font-weight: normal;
+}
+.dark-mode_body .title-box .dash p {
+  color: #c3cbe4;
+}
+.dark-mode_body .title-box h4 {
+  color: #f6f6f6;
+  font-weight: normal;
+}
+.dark-mode_body .dark-mode_items {
+  background-color: #2a3042 !important;
+}
+.dark-mode_body .dark-mode_items p {
+  color: #c3cbe4 !important;
+  font-weight: normal !important;
+}
+.dark-mode_body .dark-mode_items h3,
+.dark-mode_body .dark-mode_items h4,
+.dark-mode_body .dark-mode_items h5 {
+  color: #f6f6f6;
+  font-weight: normal !important;
+}
+.dark-mode_body .dark-mode_items a {
+  color: #f6f6f6;
+}
+.dark-mode_body .dark-mode_items td {
+  color: #a6b0cf;
+}
+.dark-mode_body .dark-mode_items .activity-calendar-dates {
+  color: #c3cbe4;
+}
+.dark-mode_body .dark-mode_items .activity-calendar-dates a {
+  color: #556ee6;
+}
+.dark-mode_body .dark-mode_items .list-header {
+  background-color: #32394e;
+}
+.dark-mode_body .dark-mode_items .list-header div {
+  font-weight: normal;
+  color: #a6b0cf;
+}
+.dark-mode_body .dark-mode_items .transaction-list_item {
+  color: #a6b0cf;
+  font-weight: normal;
+}
+.dark-mode_body .dark-mode_items .transaction-list_item div {
+  font-weight: normal;
+}
+
+.navigation-dark-mode {
+  background-color: #262b3c !important;
+}
+
+.navigation-dark-mode .wnavigation-scroll button {
+  background-color: #262b3c;
+}
+.navigation-dark-mode .wnavigation-scroll button i {
+  font-size: 25px;
+  color: #c3cbe4;
+  background-color: #262b3c;
+}
+.navigation-dark-mode .search {
+  color: #495057;
+  background-color: #32394e !important;
+}
+.navigation-dark-mode .search:placeholder-shown {
+  color: #a6b0cf;
+}
+.navigation-dark-mode .mega-link {
+  color: #a6b0cf;
+  font-weight: normal;
+}
+.navigation-dark-mode .user-menu img,
+.navigation-dark-mode .user-menu button {
+  background-color: #262b3c;
+}
+.navigation-dark-mode .user-menu img i,
+.navigation-dark-mode .user-menu button i {
+  color: #a6b0cf;
+}
+.navigation-dark-mode .user-menu span {
+  color: #a6b0cf;
+}
+
+.graphic-dark-mode .graphics-emails {
+  background-color: #1e2236 !important;
 }
 
 /*# sourceMappingURL=main.css.map */
