--- a/main.scss
+++ b/main.scss
@@ -11,3 +11,4 @@
 @import "./Sass/toggle-menu.scss";
 @import "./Sass/popup.scss";
 @import "./Sass/dark-mode.scss";
+@import "./Sass/media1150.scss";
