--- a/Sass/dark-mode.scss
+++ b/Sass/dark-mode.scss
@@ -262,4 +262,10 @@
         border-top: 1px solid rgb(50, 57, 78) !important;
     }
 
+
+    .lnk-more {
+        color: #556ee6 !important;
+    }
+
+
 }
