--- a/Sass/media1150.scss
+++ b/Sass/media1150.scss
@@ -163,6 +163,10 @@
     .transaction-list_item {
         grid-template-columns: 0.2fr 0.6fr 0.8fr 0.7fr 0.4fr 0.8fr 0.8fr 90px;
     }
+
+    .list-header {
+        grid-template-columns: 0.2fr 0.6fr 0.8fr 0.7fr 0.4fr 0.8fr 0.8fr 90px;
+    }
 }
 
 
@@ -183,7 +187,14 @@
     }
 
     .black-content {
-        display: none;
+        // display: none;
+        position: absolute;
+        width: 250px;
+        overflow: scroll;
+        left: 0;
+        top: 70px;
+        border-top: none;
+        height: 95%;
     }
 
     .white-content {
@@ -198,4 +209,200 @@
     .small-new-logo {
         display: block !important;
     }
+
+    .old-scroll {
+        display: none;
+    }
+
+
+    .hidden-media {
+        display: none;
+    }
+
+    .new-scroll {
+        display: block;
+    }
+
+    .menu-profile span {
+        display: none;
+    }
+
+    .button-fulscreen {
+        display: none;
+    }
+
+    .menu-packet_list {
+        display: none;
+    }
+}
+
+
+
+@media only screen and (max-width: 715px) {
+    .graphics-stats .stat-fx {
+
+        width: 100%;
+        margin-bottom: 15px;
+        align-items: center;
+    }
+
+    .graphics-stats {
+        flex-wrap: wrap;
+        margin-bottom: 5px;
+    }
+
+    .transactions {
+        font-size: 11px;
+        padding: 8px;
+    }
+
+    .white-content {
+        padding: 25px 30px 25px 20px;
+    }
+
+    .graphics-emails .emails-sent {
+
+        height: 100%;
+        align-items: center;
+    }
+
+    .activity-stats {
+        height: 100%;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .transactions-container {
+        overflow: scroll;
+    }
+
+    .transaction-list_item {
+        grid-template-columns: 30px 60px 90px 80px 40px 100px 100px 90px;
+        width: 615px;
+
+    }
+
+    .list-header {
+        grid-template-columns: 30px 60px 90px 80px 40px 100px 100px 90px;
+        width: 615px;
+    }
+}
+
+@media only screen and (max-width: 465px) {
+    .white-navigation {
+        padding: 0;
+    }
+
+    .mega-menu {
+        padding: 0;
+    }
+
+    .mega-menu .wnavigation-scroll button {
+        margin: 0;
+    }
+
+    .title-box {
+        flex-direction: column;
+        margin-bottom: 10px;
+    }
+
+    .welcome {
+        margin-top: 10px;
+        margin-bottom: 0;
+    }
+
+    .welcome-info {
+        flex-direction: column;
+    }
+
+    .welcome .welcome-profile {
+        width: 100%;
+    }
+
+    .welcome .welcome-user img {
+        height: 110px;
+
+    }
+
+    .earnings-graph {
+        background-position: center;
+    }
+
+    .graphics-stats .stat-fx {
+        align-items: center;
+    }
+
+    .graphics-emails .emails-sent {
+
+        align-items: flex-start;
+        flex-direction: column;
+
+        ul {
+            padding: 0;
+        }
+    }
+
+
+
+
+    .activity-info .activity-calendar-dates i {
+        margin-right: 0;
+        font-size: 14px;
+
+    }
+
+    .activity-info .activity-calendar-dates {
+
+        justify-content: space-between;
+
+        p {
+            width: 60%;
+        }
+    }
+
+    .black-content .colorChange {
+        font-size: 11px !important;
+    }
+
+    .welcome .welcome-avatar img {
+        top: 80px;
+    }
+
+    .user-menu_darkmode span {
+        display: none;
+    }
+
+    .user-menu {
+        padding: 0;
+    }
+
+    .user-menu button {
+
+        width: 40px;
+        padding: 8px 4px;
+        margin: 0;
+    }
+
+    .monthly-earnings .earnings-graphics {
+
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .menu-click-dropdown {
+
+        right: -80px;
+    }
+
+    .view {
+        white-space: nowrap;
+    }
+}
+
+
+@media only screen and (max-width: 315px) {
+    .main-items {
+        grid-template-columns: 50px 1fr;
+    }
+
 }
